--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
         </div>
     </div>
 
-    <script type="module" src="js/jsapp.js"></script>
+    <script type="module" src="jsapp.js"></script>
 </body>
 </html>
+
