--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
         </div>
     </div>
 
-    <script type="module" src="jsapp.js"></script>
+   <script src="./jsapp.js"></script>
 </body>
 </html>
+
 
