--- a/index.html
+++ b/index.html
@@ -129,8 +129,9 @@
         </div>
     </div>
 
-   <script src="./jsapp.js"></script>
+   <script type="module" src="jsapp.js"></script>
 </body>
 </html>
+
 
 
